# DesktopCouchResource

./: Makefile  desktop_couch_resource.pro  desktop_couch_resource.pro~
INSTALL_EXTERNAL_LIBS/: install-externalls~  installer_windowed_mode  installer_windowed_mode~  upgrade_kde  windows~
QLog/: Makefile  QLog.cpp  QLog.h  QLog.pro
calendardesktopcouch/calendardesktopcouch/: CMakeLists.txt  CMakeLists.txt~  Messages.sh  calendardesktopcouchresource.cpp  calendardesktopcouchresource.desktop  calendardesktopcouchresource.h  incidencemapper.cpp  incidencemapper.h  settings.kcfgc
calendardesktopcouch/calendardesktopcouch/qtcreator-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  akonadi_calendardesktopcouch_resource  akonadi_calendardesktopcouch_resource.shell  akonadi_calendardesktopcouch_resource_automoc.cpp.files  calendardesktopcouch.cbp  calendardesktopcouchresource.moc  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  org.kde.Akonadi.calendardesktopcouch.Settings.xml  settings.cpp  settings.h  settingsadaptor.cpp  settingsadaptor.h  settingsadaptor.moc
contactdesktopcouch/: CMakeLists.txt~  Messages.sh  contactdesktopcouchresource.cpp  contactdesktopcouchresource.desktop~  contactdesktopcouchresource.h  mapper.cpp  mapper.h  settings.kcfgc
contactdesktopcouch/qtcreator-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  akonadi_contactdesktopcouch_resource  akonadi_contactdesktopcouch_resource.shell  akonadi_contactdesktopcouch_resource_automoc.cpp.files  cmake_install.cmake  cmake_uninstall.cmake  contactdesktopcouch.cbp  contactdesktopcouchresource.moc  install_manifest.txt  org.kde.Akonadi.ContactDesktopCouch.Settings.xml  settings.cpp  settings.h  settingsadaptor.cpp  settingsadaptor.h  settingsadaptor.moc
couchdb-qt/: Makefile  Makefile.Debug  Makefile.Release  auth_info.cpp  auth_info.h  couchdb-qt.cpp  couchdb-qt.h  couchdb-qt.pro  moc_couchdb-qt.cpp  moc_couchdbqtchangenotifier.cpp
couchdb-qt/.kdev4/: couchdb-qt.kdev4
couchdb-qt/.svn/: entries
couchdb-qt/release/: moc_couchdb-qt.cpp  moc_couchdbqtchangenotifier.cpp
desktop-couch-qt/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  desktop-couch-qt.pro  desktop_couch.cpp  desktop_couch.h
libs/: libQLog.so.1  libQLog.so.1.0.0  libcouchdb-qt.so.1.0.0  libdesktop-couch-qt.so.1.0  libdesktop-couch-qt.so.1.0.0
tests/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  cmdline_tester.cpp  moc_test.cpp  test.cpp  test.h  tests.pro
tests/.svn/: entries
tests/output/: tests
